--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -9,14 +9,10 @@ android {
 
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
-
-    implementation "com.android.support:support-v4:27.+"
-    implementation "com.stripe:stripe-android:4.1.2"
+    implementation project(':teamhive-capacitor-email')
     implementation "com.android.support:support-v4:27.+"
 }
-apply from: "../../node_modules/card.io.cordova.mobilesdk/src/android/build.gradle"
-apply from: "../../node_modules/com.paypal.cordova.mobilesdk/src/android/build.gradle"
-apply from: "../../node_modules/phonegap-plugin-barcodescanner/src/android/barcodescanner.gradle"
+
 
 if (hasProperty('postBuildExtras')) {
   postBuildExtras()
