--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "digi-cafe-v1",
+  "name": "digicafe-updated",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Adam Wolfe",
+  "homepage": "https://digibytecafe.com/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -21,49 +21,45 @@
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
-    "@capacitor/android": "^1.4.0",
-    "@capacitor/cli": "^1.4.0",
-    "@capacitor/core": "1.5.0",
-    "@capacitor/ios": "^1.4.0",
+    "@capacitor/android": "^2.0.1",
+    "@capacitor/cli": "^2.0.1",
+    "@capacitor/core": "^2.0.1",
+    "@capacitor/ios": "^2.0.1",
     "@ionic-native/barcode-scanner": "^5.19.1",
-    "@ionic-native/card-io": "^5.19.1",
     "@ionic-native/core": "^5.0.0",
-    "@ionic-native/email-composer": "^5.6.0",
+    "@ionic-native/email-composer": "^5.24.0",
     "@ionic-native/file": "^5.6.1",
     "@ionic-native/network": "^5.6.0",
-    "@ionic-native/paypal": "^5.19.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic-native/stripe": "^5.19.1",
     "@ionic/angular": "5.0.4",
     "@ionic/storage": "^2.2.0",
+    "@ngx-translate/core": "^12.1.2",
+    "@ngx-translate/http-loader": "^4.0.0",
+    "@sendgrid/mail": "^7.0.1",
+    "@teamhive/capacitor-email": "^2.1.2",
+    "@uphold/uphold-sdk-javascript": "^2.4.0",
     "aes256": "^1.0.4",
     "ajv": "^6.10.0",
     "angularx-qrcode": "^1.5.3",
+    "browserfs": "^1.4.3",
     "buffer": "^5.5.0",
-    "card.io.cordova.mobilesdk": "^2.1.0",
-    "com.paypal.cordova.mobilesdk": "^3.5.0",
+    "cordova-plugin-androidx-adapter": "^1.1.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-email-composer": "^0.9.2",
     "cordova-plugin-file": "6.0.1",
     "cordova-plugin-network-information": "^2.0.1",
-    "cordova-plugin-stripe": "^1.5.3",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "3.0.0",
+    "cordova-sqlite-storage": "^4.0.0",
     "core-js": "^2.5.4",
     "crypto-js": "^4.0.0",
-    "digibyte": "github:block30labs/digibyte-lib",
-    "digibyte-explorers": "github:werewolfe/digibyte-explorers",
     "firebase": "^7.10.0",
     "md5-typescript": "^1.0.5",
     "ngx-clipboard": "^12.2.1",
-    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rm": "^0.1.8",
-    "rxjs": "~6.5.1",
-    "stellar-sdk": "^4.0.2",
+    "rxjs": "^6.5.5",
     "tslib": "^1.9.0",
     "web3data-js": "^0.6.1",
-    "ws": "^7.2.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -79,6 +75,7 @@
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "jetifier": "^1.6.5",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
@@ -96,16 +93,13 @@
       "cordova-plugin-device": {},
       "cordova-plugin-network-information": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-email-composer": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      },
       "cordova-plugin-file": {},
       "phonegap-plugin-barcodescanner": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
       "cordova-plugin-stripe": {},
-      "card.io.cordova.mobilesdk": {},
-      "com.paypal.cordova.mobilesdk": {}
+      "cordova-plugin-androidx-adapter": {},
+      "cordova-plugin-email-composer": {}
     }
   }
 }
