--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,11 @@
             "assets": [
               {
                 "glob": "**/*",
+                "input": "src/.well-known",
+                "output": ".well-known/"
+              },
+              {
+                "glob": "**/*",
                 "input": "src/assets",
                 "output": "assets"
               },
