--- a/ios/App/App/App.entitlements
+++ b/ios/App/App/App.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:digibytecafe.com</string>
+		<string>applinks:digicafe.digitide.us</string>
 	</array>
 </dict>
 </plist>
