--- a/package.json
+++ b/package.json
@@ -7,26 +7,28 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "postinstall": "node patch.js",
+    "postinstall": "ngcc",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~9.0.5",
-    "@angular/core": "~9.0.5",
+    "@angular/animations": "^9.0.0",
+    "@angular/common": "^9.0.0",
+    "@angular/core": "^9.0.0",
     "@angular/fire": "^6.0.0-rc.1",
-    "@angular/forms": "~9.0.5",
-    "@angular/platform-browser": "~9.0.5",
-    "@angular/platform-browser-dynamic": "~9.0.5",
-    "@angular/router": "~9.0.5",
+    "@angular/forms": "^9.0.0",
+    "@angular/platform-browser": "^9.0.0",
+    "@angular/platform-browser-dynamic": "^9.0.0",
+    "@angular/platform-server": "^9.0.0",
+    "@angular/router": "^9.0.0",
     "@capacitor/android": "^2.0.1",
     "@capacitor/cli": "^2.0.1",
     "@capacitor/core": "^2.0.1",
     "@capacitor/ios": "^2.0.1",
     "@ionic-native/barcode-scanner": "^5.19.1",
-    "@ionic-native/core": "^5.0.0",
+    "@ionic-native/core": "^5.20.0",
     "@ionic-native/email-composer": "^5.24.0",
     "@ionic-native/file": "^5.6.1",
     "@ionic-native/network": "^5.6.0",
@@ -44,6 +46,7 @@
     "angularx-qrcode": "^1.5.3",
     "browserfs": "^1.4.3",
     "buffer": "^5.5.0",
+    "bufferutil": "^4.0.1",
     "cordova-plugin-androidx-adapter": "^1.1.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-email-composer": "^0.9.2",
@@ -51,40 +54,47 @@
     "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^4.0.0",
-    "core-js": "^2.5.4",
+    "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
+    "fibers": "^3.1.0",
     "firebase": "^7.10.0",
     "md5-typescript": "^1.0.5",
     "ngx-clipboard": "^12.2.1",
+    "node-sass": "^4.14.0",
     "rm": "^0.1.8",
     "rxjs": "^6.5.5",
-    "tslib": "^1.9.0",
+    "utf-8-validate": "^5.0.2",
     "web3data-js": "^0.6.1",
-    "zone.js": "~0.10.2"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.5",
-    "@angular/cli": "~9.0.5",
-    "@angular/compiler": "~9.0.5",
-    "@angular/compiler-cli": "~9.0.5",
-    "@angular/language-service": "~9.0.5",
+    "@angular-devkit/build-angular": "^0.900.1",
+    "@angular/cli": "^9.0.0",
+    "@angular/compiler": "^9.0.0",
+    "@angular/compiler-cli": "^9.0.0",
+    "@angular/language-service": "^9.0.0",
     "@ionic/angular-toolkit": "^2.1.1",
-    "@types/jasmine": "~3.3.8",
+    "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "@types/node": "^13.13.4",
+    "codelyzer": "^5.2.2",
+    "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "^5.0.2",
     "jetifier": "^1.6.5",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
+    "karma": "^5.0.4",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine": "^3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.3",
+    "node-sass": "^4.14.0",
+    "protractor": "^5.4.4",
+    "rxjs-tslint": "^0.1.8",
     "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.7.5"
+    "tslib": "1.10.0",
+    "tslint": "^6.1.2",
+    "typescript": "3.6.4",
+    "webpack": "^4.43.0"
   },
   "description": "DigiCafe",
   "cordova": {
