--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -6,8 +6,10 @@
   },
   "exclude": [
     "test.ts",
-    "**/*.spec.ts",
-    // "src/**/*.d.ts",
-    // "src/zone-flags.ts"
+    "**/*.spec.ts"
+  ],
+  "files": [
+    "main.ts",
+    "polyfills.ts"
   ]
 }
