--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "postinstall": "ngcc",
+    "postinstall": "node patch.js, ngcc",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -38,9 +38,6 @@
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
-    "@sendgrid/mail": "^7.0.1",
-    "@teamhive/capacitor-email": "^2.1.2",
-    "@uphold/uphold-sdk-javascript": "^2.4.0",
     "aes256": "^1.0.4",
     "ajv": "^6.10.0",
     "angularx-qrcode": "^1.5.3",
@@ -58,9 +55,9 @@
     "crypto-js": "^4.0.0",
     "fibers": "^3.1.0",
     "firebase": "^7.10.0",
+    "html-webpack-plugin": "^2.30.1",
     "md5-typescript": "^1.0.5",
     "ngx-clipboard": "^12.2.1",
-    "node-sass": "^4.14.0",
     "rm": "^0.1.8",
     "rxjs": "^6.5.5",
     "utf-8-validate": "^5.0.2",
@@ -92,7 +89,7 @@
     "rxjs-tslint": "^0.1.8",
     "ts-node": "~7.0.0",
     "tslib": "1.10.0",
-    "tslint": "^6.1.2",
+    "tslint": "^5.20.1",
     "typescript": "3.6.4",
     "webpack": "^4.43.0"
   },
