--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "postinstall": "node patch.js, ngcc",
+    "postinstall": "node patch.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0",
-    "@angular/common": "^9.0.0",
-    "@angular/core": "^9.0.0",
+    "@angular/animations": "^9.1.6",
+    "@angular/common": "^9.1.6",
+    "@angular/core": "^9.1.6",
     "@angular/fire": "^6.0.0-rc.1",
-    "@angular/forms": "^9.0.0",
-    "@angular/platform-browser": "^9.0.0",
-    "@angular/platform-browser-dynamic": "^9.0.0",
-    "@angular/platform-server": "^9.0.0",
-    "@angular/router": "^9.0.0",
+    "@angular/forms": "^9.1.6",
+    "@angular/platform-browser": "^9.1.6",
+    "@angular/platform-browser-dynamic": "^9.1.6",
+    "@angular/platform-server": "^9.1.6",
+    "@angular/router": "^9.1.6",
     "@capacitor/android": "^2.0.1",
     "@capacitor/cli": "^2.0.1",
     "@capacitor/core": "^2.0.1",
@@ -65,11 +65,11 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.1",
-    "@angular/cli": "^9.0.0",
-    "@angular/compiler": "^9.0.0",
-    "@angular/compiler-cli": "^9.0.0",
-    "@angular/language-service": "^9.0.0",
+    "@angular-devkit/build-angular": "^0.901.5",
+    "@angular/cli": "^9.1.5",
+    "@angular/compiler": "^9.1.6",
+    "@angular/compiler-cli": "^9.1.6",
+    "@angular/language-service": "^9.1.6",
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "~2.0.3",
