--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@ionic-native/network": "^5.6.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "5.0.4",
+    "@ionic/angular": "^5.1.0",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
