--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "digicafe-updated",
   "version": "0.0.1",
   "author": "Adam Wolfe",
-  "homepage": "https://digibytecafe.com/",
+  "homepage": "https://digitide.us/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -65,7 +65,7 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.5",
+    "@angular-devkit/build-angular": "^0.901.7",
     "@angular/cli": "^9.1.5",
     "@angular/compiler": "^9.1.6",
     "@angular/compiler-cli": "^9.1.6",
